Added SyncKeys endpoint and edited GetOTP to add security
