# internal/grpc/github.com/PluT00/mobile-otp/api/mobile-otp/mobile-otp.pb.gw.go
@@ -35,6 +35,30 @@ var (
 	_ = metadata.Join
 )
 
+func request_MobileOTP_SyncKeys_0(ctx context.Context, marshaler runtime.Marshaler, client MobileOTPClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq SyncKeysRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := client.SyncKeys(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_MobileOTP_SyncKeys_0(ctx context.Context, marshaler runtime.Marshaler, server MobileOTPServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq SyncKeysRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.SyncKeys(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 func request_MobileOTP_GetOTP_0(ctx context.Context, marshaler runtime.Marshaler, client MobileOTPClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var (
 		protoReq GetOTPRequest
@@ -65,6 +89,26 @@ func local_request_MobileOTP_GetOTP_0(ctx context.Context, marshaler runtime.Mar
 // Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterMobileOTPHandlerFromEndpoint instead.
 // GRPC interceptors will not work for this type of registration. To use interceptors, you must use the "runtime.WithMiddlewares" option in the "runtime.NewServeMux" call.
 func RegisterMobileOTPHandlerServer(ctx context.Context, mux *runtime.ServeMux, server MobileOTPServer) error {
+	mux.Handle(http.MethodPost, pattern_MobileOTP_SyncKeys_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/mobile.otpgrpc.MobileOTP/SyncKeys", runtime.WithHTTPPathPattern("/sync-keys"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_MobileOTP_SyncKeys_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MobileOTP_SyncKeys_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodPost, pattern_MobileOTP_GetOTP_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -125,6 +169,23 @@ func RegisterMobileOTPHandler(ctx context.Context, mux *runtime.ServeMux, conn *
 // doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
 // "MobileOTPClient" to call the correct interceptors. This client ignores the HTTP middlewares.
 func RegisterMobileOTPHandlerClient(ctx context.Context, mux *runtime.ServeMux, client MobileOTPClient) error {
+	mux.Handle(http.MethodPost, pattern_MobileOTP_SyncKeys_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/mobile.otpgrpc.MobileOTP/SyncKeys", runtime.WithHTTPPathPattern("/sync-keys"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_MobileOTP_SyncKeys_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MobileOTP_SyncKeys_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodPost, pattern_MobileOTP_GetOTP_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -146,9 +207,11 @@ func RegisterMobileOTPHandlerClient(ctx context.Context, mux *runtime.ServeMux, 
 }
 
 var (
-	pattern_MobileOTP_GetOTP_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"get-otp"}, ""))
+	pattern_MobileOTP_SyncKeys_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"sync-keys"}, ""))
+	pattern_MobileOTP_GetOTP_0   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"get-otp"}, ""))
 )
 
 var (
-	forward_MobileOTP_GetOTP_0 = runtime.ForwardResponseMessage
+	forward_MobileOTP_SyncKeys_0 = runtime.ForwardResponseMessage
+	forward_MobileOTP_GetOTP_0   = runtime.ForwardResponseMessage
 )
